--- a/build.gradle
+++ b/build.gradle
@@ -14,3 +14,11 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+jacocoTestReport{
+  reports{
+    xml.enabled true
+    html.enabled true
+    csv.enabled true
+  }
+}
