--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'idea'
     id 'jacoco'
+    id 'checkstyle'
 }
 
 group 'org.example'
@@ -21,4 +22,18 @@ jacocoTestReport{
     html.enabled true
     csv.enabled true
   }
+}
+
+def classesJava = "${project.buildDir}/classes/java/main/"
+checkstyle {
+    toolVersion = "6.3"
+}
+task checkstyleMain (type: Checkstyle, overwrite: true) {
+    ignoreFailures = true
+    showViolations = false
+    source fileTree('src/main/java')
+    include '**/*.java'
+    exclude '**/gen/**'
+    classpath = fileTree(classesJava)
+    configFile = file("${rootProject.rootDir}/config/checkstyle/checkstyle.xml")
 }
